Finish up nullability

--- a/MemoryMosaic/Pages/Maintenance/MissingFiles.razor
+++ b/MemoryMosaic/Pages/Maintenance/MissingFiles.razor
@@ -29,9 +29,7 @@
 </div>
 
 @code{
-    private List<MediaRow> mediaMissingItems = null!;
-
-    protected override void OnInitialized() => mediaMissingItems = M.GetMediaMissingFiles();
+    private readonly List<MediaRow> mediaMissingItems = M.GetMediaMissingFiles();
 
     private void DeleteMissingPaths()
     {
