Fix lowercase imports that should have been uppercase

--- a/MemoryMosaic/Pages/Import.razor
+++ b/MemoryMosaic/Pages/Import.razor
@@ -222,7 +222,7 @@
 		L.LogLine($"Finish Import {nameof(OnInitialized)}", LogLevel.Info);
 	}
 
-	///Organizes the import items by putting the errors at the top of the page above the other files.
+	///Organizes the Import items by putting the errors at the top of the page above the other files.
 	public static void OrganizeItems()
 	{
 		L.LogLine($"Begin Import {nameof(OrganizeItems)}", LogLevel.Debug);
