--- a/MemoryMosaic/Pages/Maintenance/UntrackedFiles.razor
+++ b/MemoryMosaic/Pages/Maintenance/UntrackedFiles.razor
@@ -5,7 +5,7 @@
 
 <header>
     <button class="textBtn" @onclick="@MoveAll">
-        <span class="material-icons-outlined">drive_file_move</span><span>Move All to import</span>
+        <span class="material-icons-outlined">drive_file_move</span><span>Move All to Import</span>
     </button>
 
     <button class="textBtn" @onclick="@DeleteAll">
