--- a/MemoryMosaic/Pages/Import.razor
+++ b/MemoryMosaic/Pages/Import.razor
@@ -254,7 +254,7 @@
 			}
 		}
 
-		importFiles = errors.Concat(good).OrderByDescending(file => libFilesWithSameName[file.originalFilename].Count).ToList();
+		importFiles = errors.Concat(good).OrderByDescending(file => libFilesWithSameName[file.originalFilename]?.Count).ToList();
 		L.LogLine($"Finish Import {nameof(OrganizeItems)}", LogLevel.Debug);
 	}
 
