--- a/MemoryMosaic/Shared/CollectionCreator.razor
+++ b/MemoryMosaic/Shared/CollectionCreator.razor
@@ -2,7 +2,7 @@
 <link href="/css/components/CollectionCreator.css" rel="stylesheet">
 
 <div id="collectionCreator">
-    <button class="textBtn" @onclick="@NewCollectionBtnClick"><span class="material-icons-outlined">@newCollectionBtnIcon</span><span class="btnText">@newCollectionBtnText</span></button>
+    <button class="iconBtn" @onclick="@NewCollectionBtnClick" title="@title"><span class="material-icons-outlined">@newCollectionBtnIcon</span></button>
     <input type="text" placeholder="@("Enter new " + (folderChecked ? "folder" : "album") + " name")" @bind="@NewCollectionName" style="display: @collectionInputDisplay"/>
     <button class="iconBtn" @onclick="@ConfirmBtnClick" style="display: @confirmBtnDisplay"><span class="material-icons-outlined">check</span></button>
 
@@ -18,6 +18,7 @@
 
     public event EventHandler? CollectionCreated;
         
+    private string title = "New Collection";
     private string newCollectionBtnIcon = "library_add";
     private string collectionInputDisplay = "none";
     private string confirmBtnDisplay = "none";
@@ -29,6 +30,7 @@
     {
         if (newCollectionBtnText == "New Collection")
         {
+            title = "Cancel";
             newCollectionBtnIcon = "close";
             newCollectionBtnText = "Cancel";
             collectionInputDisplay = "inline";
@@ -36,6 +38,7 @@
         }
         else if (newCollectionBtnText == "Cancel")
         {
+            title = "New Collection";
             newCollectionBtnIcon = "library_add";
             newCollectionBtnText = "New Collection";
             collectionInputDisplay = "none";
