Move styles for folder checkbox and its span label to CC's .css file

--- a/MemoryMosaic/wwwroot/css/components/CollectionCreator.css
+++ b/MemoryMosaic/wwwroot/css/components/CollectionCreator.css
@@ -11,3 +11,11 @@
     margin-right: 6px;
     color: black; /* Font color */
 }
+
+#collectionCreator > div > input[type="checkbox"] {
+    margin-left: 12px;
+}
+
+#collectionCreator > div > span {
+    margin-left: 1px;
+}
