--- a/MemoryMosaic/Shared/CollectionCreator.razor
+++ b/MemoryMosaic/Shared/CollectionCreator.razor
@@ -7,8 +7,8 @@
     <button class="iconBtn" @onclick="@ConfirmBtnClick" style="display: @confirmBtnDisplay"><span class="material-icons-outlined">check</span></button>
 
     <div style="display: @confirmBtnDisplay">
-        <input style="margin-left: 12px" type="checkbox" @bind="@folderChecked">
-        <span @onclick="@(() => folderChecked = !folderChecked)" style="margin-left: 1px;">Folder?</span>
+        <input type="checkbox" @bind="@folderChecked">
+        <span @onclick="@(() => folderChecked = !folderChecked)">Folder?</span>
     </div>
 </div>
 
