Remove '?' at the end of 'Folder'

--- a/MemoryMosaic/Shared/CollectionCreator.razor
+++ b/MemoryMosaic/Shared/CollectionCreator.razor
@@ -8,7 +8,7 @@
 
     <div style="display: @confirmBtnDisplay">
         <input type="checkbox" @bind="@folderChecked">
-        <span @onclick="@(() => folderChecked = !folderChecked)">Folder?</span>
+        <span @onclick="@(() => folderChecked = !folderChecked)">Folder</span>
     </div>
 </div>
 
