--- a/MemoryMosaic/Shared/CollectionCreator.razor
+++ b/MemoryMosaic/Shared/CollectionCreator.razor
@@ -7,8 +7,8 @@
     <button class="iconBtn" @onclick="@ConfirmBtnClick" style="display: @confirmBtnDisplay"><span class="material-icons-outlined">check</span></button>
 
     <div style="display: @confirmBtnDisplay">
-        <input type="checkbox" @bind="@folderChecked">
-        <span @onclick="@(() => folderChecked = !folderChecked)">Folder</span>
+        <input type="checkbox" id="folder" @bind="@folderChecked">
+        <label for="folder">Folder</label>
     </div>
 </div>
 
