Red error icon now appears if collection name empty or already in use.

--- a/MemoryMosaic/wwwroot/css/components/CollectionCreator.css
+++ b/MemoryMosaic/wwwroot/css/components/CollectionCreator.css
@@ -12,6 +12,11 @@
     color: black; /* Font color */
 }
 
+#collectionCreator > #error {
+    color: red;
+    margin-right: 6px;
+}
+
 #collectionCreator > div {
     display: flex;
     flex-direction: row;
