--- a/MemoryMosaic/Shared/CollectionCreator.razor
+++ b/MemoryMosaic/Shared/CollectionCreator.razor
@@ -6,9 +6,15 @@
     
     @if (acceptingInput)
     {
-        <input type="text" placeholder="@("Enter new " + (folder ? "folder" : "album") + " name")" @bind="@NewCollectionName"/>
-        <button class="iconBtn" @onclick="@ConfirmBtnClick"><span class="material-icons-outlined">check</span></button>
+        <input type="text" placeholder="@($"Enter new {(folder ? "folder" : "album")} name")" @bind="@NewCollectionName"/>
 
+        if (!String.IsNullOrWhiteSpace(errorIconTitle))
+        {
+            <span title="@errorIconTitle" id="error" class="material-icons-outlined">error_outline</span>
+        }
+        
+        <button class="iconBtn" @onclick="@ConfirmBtnClick"><span class="material-icons-outlined">check</span></button>
+        
         <div>
             <input type="checkbox" id="folder" @bind="@folder">
             <label for="folder">Folder</label>
@@ -22,7 +28,7 @@
 
     public event EventHandler? CollectionCreated;
 
-    private string newCollectionBtnTitle = "New Collection", newCollectionBtnIcon = "library_add";
+    private string newCollectionBtnTitle = "New Collection", errorIconTitle = "", newCollectionBtnIcon = "library_add";
     public string NewCollectionName { get; private set; } = "";
     private bool acceptingInput, folder;
     private bool AcceptingInput
@@ -40,7 +46,7 @@
             {
                 newCollectionBtnTitle = "New Collection";
                 newCollectionBtnIcon = "library_add";
-                NewCollectionName = "";
+                NewCollectionName = errorIconTitle = "";
             }
         }
     }
@@ -49,9 +55,15 @@
     
     public void ConfirmBtnClick()
     {
-        if (String.IsNullOrWhiteSpace(NewCollectionName) || Collections.Select(n => n.name).Contains(NewCollectionName))
+        if (String.IsNullOrWhiteSpace(NewCollectionName))
         {
-            NewCollectionName = "Invalid Collection Name!";
+            errorIconTitle = "Provide Name for Collection";
+            return;
+        }
+        
+        if (Collections.Select(c => c.name).Contains(NewCollectionName))
+        {
+            errorIconTitle = "Collection Name in Use";
             return;
         }
 
