--- a/MemoryMosaic/Shared/CollectionSelector.razor
+++ b/MemoryMosaic/Shared/CollectionSelector.razor
@@ -67,11 +67,9 @@
 </div>
 
 @code {
-    public static List<Collection> albums = C.GetCollectionsTable(true, false, false);
-    public static List<Collection> folders = C.GetCollectionsTable(false, true, false);
-    
-    public static List<bool> checkedAlbums = (from album in albums select new bool()).ToList();
-    private static List<bool> checkedFolders = (from folder in folders select new bool()).ToList();
+    public static List<Collection> albums = null!, folders = null!;
+    public static List<bool> checkedAlbums = null!;
+    private static List<bool> checkedFolders = null!;
     public static int checkedFolderIndex = -1; //Which index in folders is checked (can only have 1 checked (true)).
 
     private string? searchText;
@@ -102,6 +100,15 @@
     [Parameter]
     public bool ClearChecksOnConfirm { get; set; } = true;
 
+    protected override void OnInitialized()
+    {
+        albums = C.GetCollectionsTable(true, false, false);
+        folders = C.GetCollectionsTable(false, true, false);
+        checkedAlbums = (from album in albums select new bool()).ToList();
+        checkedFolders = (from folder in folders select new bool()).ToList();
+        checkedFolderIndex = -1; //-1 = a folder isn't picked
+    }
+
     protected override void OnAfterRender(bool firstRender)
     {
         if (firstRender) collectionCreator.CollectionCreated += RefreshData;
@@ -113,7 +120,7 @@
         folders = C.GetCollectionsTable(false, true, false);
         checkedAlbums = (from album in albums select new bool()).ToList();
         checkedFolders = (from folder in folders select new bool()).ToList();
-        checkedFolderIndex = -1; //-1 = a folder isn't picked
+        checkedFolderIndex = -1;
 
         await InvokeAsync(StateHasChanged); //https://stackoverflow.com/questions/56477829/how-to-fix-the-current-thread-is-not-associated-with-the-renderers-synchroniza
 
